--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,7 +12,7 @@ git_edit_address: https://github.com/kltm/go-docs/blob/gh-pages
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
-bootwatch: paper
+bootwatch: readable
 
 # Build settings
 markdown: kramdown
