--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -51,7 +51,7 @@ defaults:
     path: _faq
     type: docs
   values:
-    layout: docs
+    layout: faq
     sectionid: faq
     seo:
       type: "WebPage"
