--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -41,14 +41,14 @@ defaults:
     seo:
       type: "WebPage"
 
-- scope:
-    path: _faq
-    type: docs
-  values:
-    sectionid: faq
-    layout: docs
-    seo:
-      type: "WebPage"
+# - scope:
+#     path: _faq
+#     type: docs
+#   values:
+#     sectionid: faq
+#     layout: docs
+#     seo:
+#       type: "WebPage"
 
 - scope:
     path: _posts
@@ -59,11 +59,11 @@ defaults:
 
 collections:
   page:
-    permalink: /:collection:/:path/
+    permalink: /:collection/:path/
     output: true
-  faq:
-    permalink: /:collection:/:path/
-    output: true
+  # faq:
+  #   permalink: /:collection:/:path/
+  #   output: true
   posts:
     permalink: /blog/:year/:month/:day/:title/
     output: true
