--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -62,7 +62,7 @@ collections:
     permalink: /:collection/:path/
     output: true
   # faq:
-  #   permalink: /:collection:/:path/
+  #   permalink: /:collection/:path/
   #   output: true
   posts:
     permalink: /blog/:year/:month/:day/:title/
