--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,13 +2,15 @@
 title: Gene Ontology
 email: TBD@geneontology.org
 description: >
-  Jekyll Template for Project Websites
-  providing documentation and blog post pages.
+  The Gene Ontology (GO) project is a major bioinformatics initiative
+  to develop a computational representation of our evolving knowledge
+  of how genes encode biological functions at the molecular, cellular
+  and tissue system levels.
 
 baseurl: "/go-docs" # the subpath of your site, e.g. /blog/
 url: https://kltm.github.io/go-docs # the base hostname & protocol for your site
 git_address: https://github.com/kltm/go-docs
-git_edit_address: https://github.com/kltm/go-docs/blob/gh-pages
+git_edit_address: https://github.com/kltm/go-docs/blob/master
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
