--- a/docs/_data/docs.yml
+++ b/docs/_data/docs.yml
@@ -10,6 +10,12 @@
   - go-annotation-policies
   - guide-go-evidence-codes
 
+- title: Evidence
+  docs:
+  - cheatsheet
+  - font-awesome
+  - bootstrap
+
 - title: Formats
   docs:
   - go-rdfxml-file-format
