try and inline downloads to docs

--- a/docs/_data/docs.yml
+++ b/docs/_data/docs.yml
@@ -25,6 +25,13 @@
   docs:
   - faq
 
+- title: Downloads
+  # docs:
+  # - about
+  # - contributors
+  # - publications
+  # - use-and-license
+
 - title: About
   docs:
   - about
