try and add some body to the downloads

--- a/docs/_data/docs.yml
+++ b/docs/_data/docs.yml
@@ -26,11 +26,10 @@
   - faq
 
 - title: Downloads
-  # docs:
-  # - about
-  # - contributors
-  # - publications
-  # - use-and-license
+  docs:
+  - download-ontology
+  - download-go-annotations
+  - download-mappings
 
 - title: About
   docs:
