--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ node_modules
 ## Do not commit our TAGS
 TAGS
 
-## Emacs things (from 
+## Emacs things (from
 ## https://github.com/github/gitignore/blob/master/Global/Emacs.gitignore).
 *~
 \#*\#
@@ -29,3 +29,14 @@ tramp
 # Org-mode
 .org-id-locations
 *_archive
+
+###
+### From upstream jekyll theme.
+###
+
+_site
+.sass-cache
+.jekyll-metadata
+*.gem
+.bundle
+vendor/bundle
