change config from branch

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,9 +8,9 @@ description: >
   and tissue system levels.
 
 baseurl: "/go-docs" # the subpath of your site, e.g. /blog/
-url: https://kltm.github.io/go-docs # the base hostname & protocol for your site
-git_address: https://github.com/kltm/go-docs
-git_edit_address: https://github.com/kltm/go-docs/blob/master/docs
+url: https://geneontology.github.io/go-docs # the base hostname & protocol for your site
+git_address: https://github.com/geneontology/go-docs
+git_edit_address: https://github.com/geneontology/go-docs/blob/master/docs
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
