--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Gene Ontology
+title: Gene Ontology Resource
 email: TBD@geneontology.org
 description: >
   The Gene Ontology (GO) project is a major bioinformatics initiative
@@ -7,7 +7,7 @@ description: >
   of how genes encode biological functions at the molecular, cellular
   and tissue system levels.
 
-baseurl: "/go-docs" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: https://geneontology.github.io/go-docs # the base hostname & protocol for your site
 git_address: https://github.com/geneontology/go-docs
 git_edit_address: https://github.com/geneontology/go-docs/blob/master/docs
