--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -30,7 +30,7 @@
   - download-go-annotations
   - download-ontology
   - download-mappings
-  - go-subset-guide.md
+  - go-subset-guide
 
 - title: About
   docs:
