--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -21,8 +21,8 @@
 
 - title: Help
   docs:
-  - contributing-go
-  - contributing-to-go-term
+  - contributing-to-go
+  - contributing-to-go-terms
   - faq
  
 
