--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -1,10 +1,11 @@
- 
+
 - title: About
   docs:
   - introduction-to-go-resource
-  - about
-  - contributors
-  - publications
+  - whoweare
+  - collaborations
+  - annotation-contributors
+  - literature
   - go-citation-policy
 
 - title: Ontology
@@ -26,5 +27,3 @@
   - download-ontology
   - download-go-annotations
   - deprecated-products-and-formats
-  
-
