Redirects for the top 80 pages (google analytics) from the old site. A few missing links (e.g. newsletter, go-tools-registry,references.cgi)

--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,9 @@ collections:
     permalink: /blog/:year/:month/:day/:title/
     output: true
 
+plugins_dir:
+- jekyll-redirect-from
+
 sass:
   sass_dir: _sass
 
