--- a/_config.yml
+++ b/_config.yml
@@ -79,4 +79,4 @@ algolia:
     - index.html
     - allposts.html
 #   nodes_to_index: 'article' # elements to be indexed
-  nodes_to_index: 'p,blockquote,li,div,paragraph,span'
+  nodes_to_index: 'p,blockquote,li,div,paragraph,span,td'
