--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -26,4 +26,5 @@
   - downloads
   - download-ontology
   - download-go-annotations
-  - deprecated-products-and-formats
+  - archives
+  - deprecated-formats
