Comments of issue-180 & basic reformating of GO annotation & GO cam download pages

--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -26,5 +26,6 @@
   - downloads
   - download-ontology
   - download-go-annotations
+  - download-go-cams
   - archives
   - deprecated-products-and-formats
