Updating email of _config

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Gene Ontology Resource
-email: TBD@geneontology.org
+email: help@geneontology.org
 description: >
   The Gene Ontology (GO) project is a major bioinformatics initiative
   to develop a computational representation of our evolving knowledge
