Deploy archive - page + menu link

--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -27,5 +27,5 @@
   - download-ontology
   - download-go-annotations
   - download-go-cams
-  - archives
+  - go-archives
   - deprecated-products-and-formats
