--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -1,7 +1,7 @@
 
 - title: About
   docs:
-  - introduction-to-go
+  - introduction-go-resource
   - whoweare
   - collaborations
   - annotation-contributors
