--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ exclude:
   - .idea/
   - .gitignore
   - README.md
+  - vendor  # In GitHub workflows, the ruby/setup-ruby action will install gems here
 timezone: America/Los_Angeles
 defaults:
 
