gorefs.html too big; for #574

--- a/_config.yml
+++ b/_config.yml
@@ -73,12 +73,13 @@ algolia:
   extensions_to_index:
     - html
     - md
-  files_to_exclude: 
+  files_to_exclude:
     - search.html
     - index.html
     - allposts.html
     - covid-19.html
-#   nodes_to_index: 'article' # elements to be indexed 
+    - gorefs.html
+#   nodes_to_index: 'article' # elements to be indexed
   nodes_to_index: 'p,blockquote,li,div,paragraph,td,span,h1,h2,h3'
 
 page_gen:
