--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -20,6 +20,7 @@
   - go-annotations
   - guide-go-evidence-codes
   - contributing-to-go
+  - go-annotation-file-gaf-format-2.2
 
 - title: Downloads
   docs:
