--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,8 @@ algolia:
     - index.html
     - allposts.html
     - gorefs.html
+    - GO_REF/0000012.html
+    - GO_REF/0000024.html
 #   nodes_to_index: 'article' # elements to be indexed
   nodes_to_index: 'p,blockquote,li,div,paragraph,td,span,h1,h2,h3'
 
