more things in thr repo that are too big to index; for #575

--- a/_config.yml
+++ b/_config.yml
@@ -80,6 +80,7 @@ algolia:
     - gorefs.html
     - GO_REF/0000012.html
     - GO_REF/0000024.html
+    - scripts/*
 #   nodes_to_index: 'article' # elements to be indexed
   nodes_to_index: 'p,blockquote,li,div,paragraph,td,span,h1,h2,h3'
 
